--- a/src/ItemTemplates/MauiItem/MauiItem.xaml
+++ b/src/ItemTemplates/MauiItem/MauiItem.xaml
@@ -10,6 +10,9 @@ $endif$
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:d="http://schemas.microsoft.com/dotnet/2021/maui/design"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+$if$ ($toolkit$ == true)
+    xmlns:mct="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
+$endif$
     xmlns:local="clr-namespace:$rootnamespace$"
 $if$ ($generic$ == true)
     x:TypeArguments="$typearg$"
