--- a/src/MauiTemplatesCLI/MauiAppCS/Views/MainPage.xaml
+++ b/src/MauiTemplatesCLI/MauiAppCS/Views/MainPage.xaml
@@ -17,6 +17,7 @@
         <Grid RowDefinitions="*,40">
 <!--#if (Net8OrLater)-->
             <BlazorWebView
+                x:Name="bwv"
                 HostPage="wwwroot/index.html"
                 StartPath="{x:Bind StartPath}">
 <!--#else-->
@@ -57,6 +58,7 @@
         <Grid RowDefinitions="*,40">
 <!--#if (Net8OrLater)-->
             <BlazorWebView
+                x:Name="bwv"
                 HostPage="wwwroot/index.html"
                 StartPath="{Binding StartPath}">
 <!--#else-->
@@ -96,6 +98,7 @@
         <Grid RowDefinitions="*,40">
 <!--#if (Net8OrLater)-->
             <BlazorWebView
+                x:Name="bwv"
                 HostPage="wwwroot/index.html"
                 StartPath="/counter">
 <!--#else-->
