VS Extension updated to its corresponding CLI NuGet package #262

--- a/src/Extensions/MauiTemplates/MauiTemplates/GenericItemDialog.xaml
+++ b/src/Extensions/MauiTemplates/MauiTemplates/GenericItemDialog.xaml
@@ -68,6 +68,9 @@
                     <ComboBoxItem>StackLayout</ComboBoxItem>
                     <ComboBoxItem>SwipeView</ComboBoxItem>
                     <ComboBoxItem>TabbedPage</ComboBoxItem>
+                    <ComboBoxItem>TemplatedPage</ComboBoxItem>
+                    <ComboBoxItem>TemplatedView</ComboBoxItem>
+                    <ComboBoxItem>Window</ComboBoxItem>
                 </ComboBox.Items>
             </ComboBox>
             <Label
