--- a/src/MauiTemplatesCLI/MauiAppCS/Resources/Styles.xaml
+++ b/src/MauiTemplatesCLI/MauiAppCS/Resources/Styles.xaml
@@ -129,12 +129,14 @@
         </Setter>
     </Style>
 
+<!--#if (Net8)-->
     <Style TargetType="Frame">
         <Setter Property="HasShadow" Value="False" />
         <Setter Property="BorderColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray950}}" />
         <Setter Property="CornerRadius" Value="8" />
     </Style>
 
+<!--#endif-->
     <Style TargetType="ImageButton">
         <Setter Property="Opacity" Value="1" />
         <Setter Property="BorderColor" Value="Transparent" />
