Templates updated to support .NET MAUI 10 Preview 4 and .NET MAUI 9 SR7 #304

--- a/src/MauiTemplatesCLI/MauiAppCS/Resources/Styles.xaml
+++ b/src/MauiTemplatesCLI/MauiAppCS/Resources/Styles.xaml
@@ -174,11 +174,13 @@
         </Setter>
     </Style>
 
+<!--#if (Net8 || Net9)-->
     <Style TargetType="ListView">
         <Setter Property="SeparatorColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray500}}" />
         <Setter Property="RefreshControlColor" Value="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource Gray200}}" />
     </Style>
 
+<!--#endif-->
     <Style TargetType="Picker">
         <Setter Property="TextColor" Value="{AppThemeBinding Light={StaticResource TextLight}, Dark={StaticResource TextDark}}" />
         <Setter Property="TitleColor" Value="{AppThemeBinding Light={StaticResource Gray900}, Dark={StaticResource Gray200}}" />
